--- a/level-1/step-1/step-1.css
+++ b/level-1/step-1/step-1.css
@@ -1,6 +1,6 @@
 .header {
     width: 100%;
-    height: 100px;
+    height: 13vh;
     background: #D8D8D8;
 }
 
@@ -9,8 +9,9 @@
 .content-left {
     width: 34%;
     /* This height is a placeholder. You will need to make some adjustments to get this container to look like the design. */
-    height: 100px;
+    height: 75vh;
     background: #565555;
+    float: left;
 }
 
 
@@ -19,14 +20,17 @@
 .content-mid {
     width: 66%;
     /* This height is a placeholder. You will need to make some adjustments to get this container to look like the design. */
-    height: 100px;
+    height: 75vh;
     background: #B0B0B0;
+    float: right;
 }
 
 /* I would suggest using position to get this container to the bottom of the screen  */
 
 .footer {
     width: 100%;
-    height: 100px;
+    height: 12vh;
     background: #3A3A3A;
+    position: fixed;
+    bottom: 0;
 }
