--- a/level-2/step-2/step-2.css
+++ b/level-2/step-2/step-2.css
@@ -1,6 +1,7 @@
 /* Step-2 add a text-align that will align items in the center.  */
 .main-bottom-section {
   margin-top: 65px;
+  text-align: center;
   /* alignment property */
 }
 
@@ -12,22 +13,25 @@
     margin: 0 20px 30px;
     background: #DED6D3;
     margin-bottom: 30px;
+    width: 200px;
+    height: 150px;
+    display: inline-block;
 }
 
 /* Step-2 Add a width, height, and margin property to make these containers look like the design. Remember margin: auto is helpful when trying to center a container. */
 .full-width-item {
-    /*width*/
-    /*height*/
-    /*margin*/
     margin:0 auto 30px;
     background: #DED6D3;
+    width: 444px;
+    height: 100px;
+    margin: 0 auto 10 auto;
 }
 
 /* Step-2 Add a width, height, and margin property to make these containers look like the design. Remember margin: auto is helpful when trying to center a container. */
 .large-item {
-    /*width*/
-    /*height*/
-    /*margin*/
+    width: 444px;
+    height: 400px;
+    margin: 0 auto 30px auto;
     background: #DED6D3;
 }
 
